# gary_liftup

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
gary_liftup/: __init__.py
gary_liftup/calibrate/: up_and_down.py
gary_liftup/control/: README.md  __init__.py  get_gold.py  up_down.py
gary_liftup/control/tools/: __init__.py
include/utils/: first_order_filter.hpp
src/: liftup_teleop.cpp
src/utils/: first_order_filter.cpp
test/: test_basic_knowledge.py
